--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 db.driver: com.mysql.cj.jdbc.Driver
 db.url: jdbc:mysql://localhost:3306/healthify-dev
 db.username:root
-db.password:admin
+db.password:sujata@123
 
 # Hibernate Properties
 hibernate.dialect: org.hibernate.dialect.MySQL8Dialect
