--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 db.driver: com.mysql.cj.jdbc.Driver
 db.url: jdbc:mysql://localhost:3306/healthify-dev
 db.username:root
-db.password:pratieq
+db.password:admin@123
 
 # Hibernate Properties
 hibernate.dialect: org.hibernate.dialect.MySQL8Dialect
@@ -11,6 +11,7 @@ hibernate.format_sql=false
 hibernate.hbm2ddl.auto: update
 entitymanager.packagesToScan: com
 server.port=8090
+
 
 user.roles: ROLE_ADMIN,ROLE_DOCTOR,ROLE_PHARMACIST,ROLE_RECEPTIONIST
 spring.application.name= HMS-SERVICE
